# ArkOLD

./: .gitignore  CHANGELOG.md  README.md  ark.cabal  berry.cabal
SOURCE/alacritty/: nord.yml
SOURCE/kitty/: nord.conf
app/: Main.hs
src/Ark/: Database.hs  Themes.hs  Util.hs
src/Ark/Database/: Network.hs  Themes.hs
src/Ark/Themes/: Alacritty.hs  Fzf.hs  Kitty.hs  Options.hs
src/Ark/Util/: Archives.hs  Shell.hs
src/Berry/: Database.hs  Themes.hs
src/Berry/Database/: Network.hs  Themes.hs
src/Berry/Themes/: Alacritty.hs  Kitty.hs
