cabal-version:      2.4
name:               ark
version:            1.0.0

-- The license under which the package is released.
license: AGPL-3.0-or-later

-- The package author(s).
author: cobaltinferno

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: cobaltinferno

extra-source-files: README.md, LICENSE

library
    exposed-modules:
        Ark.Themes
        Ark.Themes.Alacritty
        Ark.Themes.Kitty
        Ark.Themes.Fzf
        Ark.Themes.Options
        Ark.Database
        Ark.Database.Themes
        Ark.Database.Network
        Ark.Util
        Ark.Util.Shell


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , directory
      , http-conduit
      , bytestring
      , filepath
      , text
      , process
    hs-source-dirs:   src
    default-language: Haskell2010

executable ark
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        ark,
        optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
