cabal-version:      2.4
name:               berry
version:            0.1.0.0

-- The license under which the package is released.
license: AGPL-3.0-or-later

-- The package author(s).
author: cobaltinferno

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: cobaltinferno

extra-source-files: CHANGELOG.md, README.md, LICENSE

library
    exposed-modules:
        Berry.Themes
        Berry.Themes.Alacritty
        Berry.Database
        Berry.Database.Themes
        Berry.Database.Network

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , directory
      , http-conduit
      , bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

executable berry
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        berry,
        optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010
